# my-uni

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-09.jsonl  2026-07-12.jsonl
src/myuni/: cli.py  plan.py  status.py
tests/: test_cli.py  test_harness_drift.py  test_plan.py  test_status.py
