[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-uni"
version = "0.0.1"
description = "Decomposes a field-of-study issue into a curriculum, opening one topic issue per entry for MyResearcher."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mythings-core", "my-guard"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
myuni = "myuni.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myuni"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
