[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-uni"
version = "0.0.1"
description = "Decomposes a field-of-study issue into curriculum topic issues for MyResearcher."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mythings-core", "my-guard"]

[project.scripts]
myuni = "myuni.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[tool.hatch.build.targets.wheel]
packages = ["src/myuni"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
